--- a/vault.html
+++ b/vault.html
@@ -1,73 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-QL8N3YFW6B');
-</script>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>AnchorStack Vault</title>
-<link rel="icon" href="images/favicon.png" type="image/png" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-QL8N3YFW6B');
+  </script>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AnchorStack Vault</title>
+  <link rel="icon" href="images/favicon.png" type="image/png" />
 
-<style>
-.product-card .badge {
-  display: inline-block;
-  background-color: #e53935;
-  color: white;
-  font-size: 0.75rem;
-  font-weight: bold;
-  border-radius: 999px;
-  padding: 2px 8px;
-  margin-bottom: 8px;
-}
-
-.vault-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 2rem;
-}
-.main-products {
-  flex: 1 1 65%;
-  min-width: 300px;
-}
-.substack-sidebar {
-  flex: 1 1 30%;
-  min-width: 280px;
-  max-width: 360px;
-}
-.vault-grid {
-  justify-content: flex-start;
-  max-width: 1000px;
-  margin: auto;
-}
-.product-card {
-  max-width: 220px;
-}
-
-  @media (min-width: 768px) {
-    .substack-sidebar {
-      float: right;
-      max-width: 300px;
-      margin-left: 2rem;
+  <style>
+    .product-card .badge {
+      display: inline-block;
+      background-color: #e53935;
+      color: white;
+      font-size: 0.75rem;
+      font-weight: bold;
+      border-radius: 999px;
+      padding: 2px 8px;
+      margin-bottom: 8px;
     }
-  }
-  @media (max-width: 767px) {
-    .substack-sidebar {
-      float: none;
-      margin: 2rem auto;
+    .vault-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      gap: 2rem;
     }
-  }
-  .product-card {
-    max-width: 240px;
-    padding: 0.75rem;
-  }
-
+    .main-products {
+      flex: 1 1 65%;
+      min-width: 300px;
+    }
+    .substack-sidebar {
+      flex: 1 1 30%;
+      min-width: 280px;
+      max-width: 360px;
+    }
+    .vault-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 1.5rem;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .product-card {
+      background-color: white;
+      border-radius: 12px;
+      text-align: center;
+      padding: 1rem;
+      max-width: 240px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      text-decoration: none;
+      color: #222;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .product-card:hover {
+      transform: scale(1.03);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+    }
     .product-card img {
       width: 100%;
       height: 180px;
@@ -79,157 +73,137 @@
       font-size: 1rem;
       margin: 0.5rem 0;
       overflow-wrap: break-word;
-      word-break: break-word;
     }
     .product-card .price {
       font-weight: bold;
       color: #6c5ce7;
     }
-
-  body {
-    font-family: sans-serif;
-    background: #f9f9f9;
-    color: #333;
-    padding: 2rem;
-    margin: 0;
-  }
-  h1, h2 {
-    text-align: center;
-  }
-  .vault-banner {
-    background: #6c5ce7;
-    color: #fff;
-    padding: 1.5rem;
-    border-radius: 10px;
-    margin-bottom: 2rem;
-    text-align: center;
-    font-size: 1.2rem;
-  }
-  .vault-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-    gap: 1.5rem;
-    justify-content: center;
-  }
-  .product-card {
-    background-color: white;
-    border-radius: 12px;
-    text-align: center;
-    padding: 1rem;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    text-decoration: none;
-    color: #222;
-    transition: transform 0.2s, box-shadow 0.2s;
-  }
-  .product-card:hover {
-    transform: scale(1.03);
-    box-shadow: 0 6px 12px rgba(0,0,0,0.15);
-  }
-  .substack-form {
-    text-align: center;
-    margin-top: 3rem;
-  }
-  .substack-form iframe {
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    width: 100%;
-    max-width: 480px;
-    height: 180px;
-  }
-
-  .product-card::before {
-    content: "";
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    margin-right: 6px;
-    vertical-align: middle;
-  }
-  .tier-free::before {
-    background-color: #00C853;
-  }
-  .tier-mid::before {
-    background-color: #FFD600;
-  }
-  .tier-top::before {
-    background-color: #D50000;
-  }
-
-</style>
+    .product-card::before {
+      content: "";
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      margin-right: 6px;
+      vertical-align: middle;
+    }
+    .tier-free::before {
+      background-color: #00C853;
+    }
+    .tier-mid::before {
+      background-color: #FFD600;
+    }
+    .tier-top::before {
+      background-color: #D50000;
+    }
+    body {
+      font-family: sans-serif;
+      background: #f9f9f9;
+      color: #333;
+      padding: 2rem;
+      margin: 0;
+    }
+    h1, h2 {
+      text-align: center;
+    }
+    .vault-banner {
+      background: #6c5ce7;
+      color: #fff;
+      padding: 1.5rem;
+      border-radius: 10px;
+      margin-bottom: 2rem;
+      text-align: center;
+      font-size: 1.2rem;
+    }
+    .substack-form {
+      text-align: center;
+      margin-top: 3rem;
+    }
+    .substack-form iframe {
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      width: 100%;
+      max-width: 480px;
+      height: 180px;
+    }
+  </style>
 </head>
 <body>
-<div class="vault-container">
-
-  <h1>🚪 Welcome to the AnchorStack Vault</h1>
-  <div class="vault-banner">
-    Thank you for being a Vault Member. You're unlocking tools designed to bring clarity, momentum, and peace to your creative work.
-  </div>
-
-  <div class="main-products">
-<h2>🎁 Free Tier Access</h2>
-  <div class="vault-grid">
-<a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/msenf" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
-<img alt="Clarity Core Bundle" src="images/clarity-core-bundle.jpg"/>
-<h3>Clarity Core Bundle</h3><p class="price">$39</p>
-</a>
-<a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/nupwf" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
-<img alt="Calm Clarity Kit – 7-Day Edition" src="images/calm-clarity-kit.jpg"/>
-<h3>Calm Clarity Kit – 7-Day Edition</h3><p class="price">$15</p>
-</a>
-<a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/jqzdtq" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
-<img alt="Launch &amp; Earn Combo Pack" src="images/launch-earn-combo.jpg"/>
-<h3>Launch &amp; Earn Combo Pack</h3><p class="price">$15</p>
-</a>
-</div>
-
-  <h2>⚡ Mid Tier Access</h2>
-  <div class="vault-grid">
-<a class="product-card tier-mid" href="https://grafixartistry6.gumroad.com/l/lapqw" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
-<img alt="Work-Life Integration Mastery" src="images/work-life-integration.jpg"/>
-<h3>Work-Life Integration Mastery</h3><p class="price">$9</p>
-</a>
-<a class="product-card tier-mid" href="https://grafixartistry6.gumroad.com/l/jfkdn" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
-<img alt="HustleMode Notion Command Center" src="images/hustlemode-command-center.jpg"/>
-<h3>HustleMode Notion Command Center</h3><p class="price">$29</p>
-</a>
-</div>
-
-  <h2>🚀 Top Tier Access</h2>
-  <div class="vault-grid">
-<a class="product-card tier-top" href="https://grafixartistry6.gumroad.com/l/gxpksf" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
-<img alt="Clarity Master Bundle" src="images/clarity-master-bundle.jpg"/>
-<h3>Clarity Master Bundle</h3><p class="price">$99</p>
-</a>
-<a class="product-card tier-top" href="https://grafixartistry6.gumroad.com/l/eylhzc" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
-<img alt="Digital Clarity Kit (Blueprint)" src="images/digital-clarity-kit.jpg"/>
-<h3>Digital Clarity Kit (Blueprint)</h3><p class="price">$199</p>
-</a>
-</div>
-
-  <section class="vault-extras">
-  <details style="margin-top: 3rem;">
-    <summary style="font-size: 1.2rem; cursor: pointer;">📬 Get Vault Updates</summary>
-    </details>
-
-  <div class="vault-blurbs" style="margin-top: 3rem;">
-    <div style="margin-bottom: 2rem;">
-      <h3>💸 Become an Affiliate</h3>
-      <p>Want to earn by sharing the Vault? Join our affiliate program and get paid when others unlock access.</p>
-     <a href="mailto:support@anchorstack.pro?subject=Affiliate" target="_blank" style="color: #6c5ce7; font-weight: bold;">Become an Affliate →</a>
+  <div class="vault-container">
+    <h1>🚪 Welcome to the AnchorStack Vault</h1>
+    <div class="vault-banner">
+      Thank you for being a Vault Member. You're unlocking tools designed to bring clarity, momentum, and peace to your creative work.
     </div>
-    <div>
-      <h3>🤝 Collaboration Invitation</h3>
-      <p>Got something to share with the AnchorStack community? We're always open to high-quality collabs, guest kits, or digital tools.</p>
-      <a href="mailto:support@anchorstack.pro?subject=Vault Collaboration Pitch" target="_blank" style="color: #6c5ce7; font-weight: bold;">Pitch your idea →</a>
-    </div>
-  </div>
-</section>
 
-</div>
-</body>
+    <div class="main-products">
+      <h2>🎁 Free Tier Access</h2>
+      <div class="vault-grid">
+        <a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/mbxcud" target="_blank">
+          <span class="badge">Free</span>
+          <img src="images/calm-clarity-kit.jpg" alt="Calm Clarity Kit">
+          <h3>Calm Clarity Kit – 7-Day Edition</h3>
+          <p class="price">FREE</p>
+        </a>
+      </div>
 
+      <h2>⚡ Mid Tier Access</h2>
+      <div class="vault-grid">
+        <a class="product-card tier-mid" href="https://grafixartistry6.gumroad.com/l/msenf" target="_blank">
+          <span class="badge">New</span>
+          <img src="images/clarity-core-bundle.jpg" alt="Clarity Core Bundle">
+          <h3>Clarity Core Bundle</h3>
+          <p class="price">$39</p>
+        </a>
+        <a class="product-card tier-mid" href="https://grafixartistry6.gumroad.com/l/lapqw" target="_blank">
+          <span class="badge">New</span>
+          <img src="images/work-life-integration.jpg" alt="Work-Life Integration Mastery">
+          <h3>Work-Life Integration Mastery</h3>
+          <p class="price">$9</p>
+        </a>
+        <a class="product-card tier-mid" href="https://grafixartistry6.gumroad.com/l/jfkdn" target="_blank">
+          <span class="badge">New</span>
+          <img src="images/hustlemode-command-center.jpg" alt="HustleMode Command Center">
+          <h3>HustleMode Notion Command Center</h3>
+          <p class="price">$29</p>
+        </a>
+        <a class="product-card tier-mid" href="https://grafixartistry6.gumroad.com/l/npruu" target="_blank">
+          <span class="badge">New</span>
+          <img src="images/momentum-toolkit.jpg" alt="Momentum Mapping Toolkit">
+          <h3>Momentum Mapping Toolkit</h3>
+          <p class="price">$15</p>
+        </a>
+      </div>
 
-</div>
-</body>
-</html>
+      <h2>🚀 Top Tier Access</h2>
+      <div class="vault-grid">
+        <a class="product-card tier-top" href="https://grafixartistry6.gumroad.com/l/gxpksf" target="_blank">
+          <span class="badge">Top</span>
+          <img src="images/clarity-master-bundle.jpg" alt="Clarity Master Bundle">
+          <h3>Clarity Master Bundle</h3>
+          <p class="price">$99</p>
+        </a>
+        <a class="product-card tier-top" href="https://grafixartistry6.gumroad.com/l/eylhzc" target="_blank">
+          <span class="badge">Top</span>
+          <img src="images/digital-clarity-kit.jpg" alt="Digital Clarity Kit">
+          <h3>Calm Clarity Blueprint</h3>
+          <p class="price">$199</p>
+        </a>
+        <a class="product-card tier-top" href="https://grafixartistry6.gumroad.com/l/jqzdtq" target="_blank">
+          <span class="badge">Top</span>
+          <img src="images/launch-earn-combo.jpg" alt="Launch & Earn Combo">
+          <h3>Launch & Earn Combo Pack</h3>
+          <p class="price">$49</p>
+        </a>
+      </div>
+
+      <button id="substack-toggle" style="margin: 3rem 0 1rem 0;">📬 Get Vault Updates</button>
+      <div id="substack-box" style="display: none;">
+        <iframe src="https://rickyjarnagin.substack.com/embed" width="100%" height="320" style="border:1px solid #ccc; border-radius:4px;" frameborder="0" scrolling="no"></iframe>
+      </div>
+
+      <div class="vault-blurbs" style="margin-top: 3rem;">
+        <div style="margin-bottom: 2rem;">
+          <h3>💸 Become an Affiliate</h3>
+          <p>Want to earn by sharing the Vault? Join our affiliate program and get paid when others unlock access.</p>
+          <a href="mailto:support@anchorstack.pro?subject=Affili
+
