--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <h1>Reset Your Focus in 30 Days</h1>
     <p class="subhead">Join thousands of creators reclaiming clarity and momentum — one day at a time.</p>
     <div class="form-container">
-      <form name="focus-challenge" method="POST" data-netlify="true" action="/welcome">
+      <form name="focus-challenge" method="POST" data-netlify="true" action="//welcome/index.html">
         <input type="text" name="name" placeholder="Your first name" required />
         <input type="email" name="email" placeholder="Your email address" required />
         <button type="submit">Start Challenge + Unlock Vault</button>
