--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <form name="focus-challenge"
       method="POST"
       data-netlify="true"
-      action="/welcome/">
+      action="/welcome.html">
         <label for="name">First Name:</label>
         <input type="text" id="name" name="name" placeholder="Your first name" required />
 
