--- a/index.html
+++ b/index.html
@@ -1,181 +1,71 @@
-<! Force Refresh>>
-
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AnchorStack | 30-Day Focus Challenge</title>
-  <style>
-    :root {
-      --primary: #007f7f;
-      --highlight: #004f4f;
-      --background: #fdfdfd;
-      --accent: #e0f7f7;
-      --dark: #1e1e1e;
-    }
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: var(--background);
-      color: var(--dark);
-      margin: 0;
-      padding: 0;
-    }
-    .top-bar {
-      background: var(--highlight);
-      color: white;
-      padding: 0.5rem 1rem;
-      text-align: center;
-      font-weight: bold;
-      font-size: 1rem;
-    }
-    .hero {
-      padding: 3rem 1.5rem 2rem;
-      background: white;
-      text-align: center;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-    }
-    .hero h1 {
-      font-size: 2.5rem;
-      color: var(--highlight);
-      margin-bottom: 0.5rem;
-    }
-    .hero p.subhead {
-      font-size: 1.2rem;
-      color: #444;
-      margin-bottom: 2rem;
-    }
-    .cta-bar {
-      background: var(--primary);
-      color: white;
-      padding: 1rem;
-      text-align: center;
-      font-size: 1rem;
-    }
-    .form-container {
-      max-width: 500px;
-      margin: auto;
-      background: var(--accent);
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    input[type="text"], input[type="email"] {
-      padding: 1rem;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    button {
-      padding: 1rem;
-      background: var(--highlight);
-      color: white;
-      font-size: 1rem;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-    button:hover {
-      background: #003636;
-    }
-    .bonus {
-      margin-top: 1.5rem;
-      font-size: 0.95rem;
-      color: #333;
-    }
-    .badge {
-      display: inline-block;
-      margin-top: 1rem;
-      background: #fff;
-      padding: 0.5rem 1rem;
-      border: 2px solid var(--primary);
-      color: var(--primary);
-      font-weight: bold;
-      border-radius: 5px;
-    }
-    .section {
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-    .section h2 {
-      color: var(--highlight);
-    }
-    .vault-box {
-      background: var(--accent);
-      padding: 1rem;
-      margin-top: 1rem;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-      border-left: 4px solid var(--primary);
-      border-radius: 6px;
-      text-align: left;
-    }
-    .vault-box a {
-      text-decoration: none;
-      color: var(--highlight);
-      font-weight: bold;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #777;
-    }
-  </style>
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QL8N3YFW6B');
+</script>
+
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Home – AnchorStack</title>
+<style>
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            padding: 2rem;
+            background: #2f2f2f;
+            color: #f0f0f0;
+            line-height: 1.6;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: center;
+        }
+        a {
+            color: #00BFFF;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .button {
+            display: inline-block;
+            background: #00BFFF;
+            color: #fff;
+            padding: 0.75rem 1.5rem;
+            border-radius: 6px;
+            margin-top: 1rem;
+            text-decoration: none;
+        }
+        h1, h2 {
+            color: #ffffff;
+        }
+    </style>
 </head>
 <body>
+<div class="container">
+<h1>AnchorStack</h1>
+<p>Tools for creators who want to build better, not busier.</p>
+<form action="https://formspree.io/f/xyzjdany" method="POST">
+  <label for="name">First Name:</label>
+  <input type="text" id="name" name="name" required>
 
-  <div class="top-bar">AnchorStack — Clarity. Momentum. Creation.</div>
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email" required>
 
-  <div class="hero">
-    <h1>Reset Your Focus in 30 Days</h1>
-    <p class="subhead">Join thousands of creators reclaiming clarity and momentum — one day at a time.</p>
+  <!-- Redirect after successful submission -->
+  <input type="hidden" name="_redirect" value="/thank-you.html">
 
-    <div class="form-container">
-    <form name="focus-challenge"
-      method="POST"
-      data-netlify="true"
-      action="/thank-you.html">
-        <label for="name">First Name:</label>
-        <input type="text" id="name" name="name" placeholder="Your first name" required />
+  <button type="submit">Start Challenge + Unlock Vault</button>
+</form>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Your email address" required />
-
-        <button type="submit">Start Challenge + Unlock Vault</button>
-      </form>
-    </div>
-
-    <p class="bonus">You’ll receive Day 1 instantly — plus a free pass to the AnchorStack Vault.</p>
-    <div class="badge">🎁 Includes FREE Vault Access</div>
-  </div>
-
-  <div class="cta-bar">🚀 Next wave starts July 1 — Join now and get the Momentum Toolkit bonus!</div>
-
-  <div class="section">
-    <h2>What’s Inside the 30-Day Challenge?</h2>
-    <ul style="list-style: none; padding: 0; max-width: 700px; margin: auto; text-align: left;">
-      <li>✔ Daily clarity prompts and check-ins</li>
-      <li>✔ Vault tools to support each week’s focus</li>
-      <li>✔ Exclusive templates and digital downloads</li>
-      <li>✔ A progress map you can revisit anytime</li>
-    </ul>
-
-    <div class="vault-box">
-      <h3>🔓 About the Vault</h3>
-      <p>The AnchorStack Vault is your free creator’s toolkit — packed with clarity planners, digital kits, and strategic resources to help you stay focused.</p>
-      <a href="/vault">Take a peek inside →</a>
-    </div>
-  </div>
-
-  <footer>© 2025 AnchorStack • Built with focus • Powered by purpose</footer>
-
+<p style="margin-top: 2rem;">Clarity. Momentum. Creation — without the noise.</p>
+</div>
 </body>
 </html>
