--- a/index.html
+++ b/index.html
@@ -64,6 +64,26 @@
 
   <button type="submit">Start Challenge + Unlock Vault</button>
 </form>
+<script>
+  const form = document.querySelector("form");
+  form.addEventListener("submit", function (e) {
+    e.preventDefault();
+    const data = new FormData(form);
+    fetch(form.action, {
+      method: form.method,
+      body: data,
+      headers: {
+        'Accept': 'application/json'
+      }
+    }).then(response => {
+      if (response.ok) {
+        window.location.href = "/thank-you.html";
+      } else {
+        alert("Oops! There was a problem submitting your form");
+      }
+    });
+  });
+</script>
 
 
 <p style="margin-top: 2rem;">Clarity. Momentum. Creation — without the noise.</p>
