--- a/index.html
+++ b/index.html
@@ -52,38 +52,43 @@
 <div class="container">
 <h1>AnchorStack</h1>
 <p>Tools for creators who want to build better, not busier.</p>
-<form action="https://formspree.io/f/xyzjdany" method="POST">
+<form id="focus-form" action="https://formspree.io/f/xyzjdany" method="POST">
   <label for="name">First Name:</label>
   <input type="text" id="name" name="name" required>
 
   <label for="email">Email:</label>
   <input type="email" id="email" name="email" required>
 
-  <!-- 🔁 Add this line for redirect -->
-  <input type="hidden" name="_redirect" value="/thank-you.html">
-
   <button type="submit">Start Challenge + Unlock Vault</button>
 </form>
+
 <script>
-  const form = document.querySelector("form");
-  form.addEventListener("submit", function (e) {
+  const form = document.getElementById("focus-form");
+  form.addEventListener("submit", async function(e) {
     e.preventDefault();
     const data = new FormData(form);
-    fetch(form.action, {
-      method: form.method,
-      body: data,
-      headers: {
-        'Accept': 'application/json'
-      }
-    }).then(response => {
+
+    try {
+      const response = await fetch(form.action, {
+        method: "POST",
+        body: data,
+        headers: {
+          Accept: "application/json"
+        }
+      });
+
       if (response.ok) {
         window.location.href = "/thank-you.html";
       } else {
-        alert("Oops! There was a problem submitting your form");
+        alert("Something went wrong. Please try again.");
       }
-    });
+    } catch (error) {
+      console.error("Submission error:", error);
+      alert("Submission failed. Please try again.");
+    }
   });
 </script>
+
 
 
 <p style="margin-top: 2rem;">Clarity. Momentum. Creation — without the noise.</p>
