--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 <!-- Google tag (gtag.js) -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
 <script>
