--- a/vault.html
+++ b/vault.html
@@ -2,10 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AnchorStack Vault</title>
-  <link rel="icon" href="images/favicon.png" type="image/png" />
+  <link rel="icon" href="images/favicon.ico" type="image/png" />
   <style>
     body {
       font-family: sans-serif;
